<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout android:id="@+id/zhihu_detail_container"
    android:background="@color/cardview_light_background"
    android:transitionGroup="false"
    android:transitionName="@string/transition_shot_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.jyutwaa.zhaoziliang.glimpse.Widgets.ParallaxScrimageView
            android:id="@+id/zhihu_detail_shot"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:foreground="@drawable/ripple_grey"
            android:minHeight="168dp"
            android:transitionName="@string/transition_shot"
            app:maxScrimAlpha="0.4"
            app:parallaxFactor="-0.5"
            app:scrimAlpha="0"
            app:scrimColor="@color/scrim"
            />

        <com.jyutwaa.zhaoziliang.glimpse.Widgets.TranslateYTextView
            android:id="@+id/zhihu_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="40dp"
            android:stateListAnimator="@animator/app_bar_pin"
            android:textColor="@color/text_primary_light"
            android:textSize="23sp"
            app:maxScrimAlpha="0.4"
            app:parallaxFactor="-0.5"
            app:scrimAlpha="0"
            app:scrimColor="@color/scrim"/>

    </FrameLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/zhihu_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:outlineProvider="none"
        android:elevation="1dp"
        android:background="#3b000000"
        style="@style/HomeToolbar"
        app:title="@string/detail_toolbar_title"
        />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/zhihu_detail_nest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="260dp"
            android:orientation="vertical">

            <WebView
                android:id="@+id/zhihu_detail_web"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/nev_item"/>

            <!--解决nestView无法滑倒低端-->
            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/background_light"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</FrameLayout>